# python_template

./: .env.example  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
docs/: index.md
python_template/: sanity.py
tests/: test_main.py  test_sanity.py
